--- a/Yelp/Base.lproj/Main.storyboard
+++ b/Yelp/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="107" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="yTi-kG-UaM">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="107" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="yTi-kG-UaM">
                                 <rect key="frame" x="0.0" y="-8" width="320" height="568"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -106,6 +106,12 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="qPu-Gg-eAW" firstAttribute="top" secondItem="yTi-kG-UaM" secondAttribute="bottom" constant="8" id="2lY-On-8PS"/>
+                            <constraint firstItem="yTi-kG-UaM" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" constant="-8" id="Jer-x0-Klz"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="yTi-kG-UaM" secondAttribute="trailing" constant="-16" id="KwY-Zl-n73"/>
+                            <constraint firstItem="yTi-kG-UaM" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="wQ2-ZL-UWs"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="tmB-gO-IWS">
                         <barButtonItem key="leftBarButtonItem" style="plain" id="oHg-h1-Qe7">
